--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "wonka": "^6.3.2"
   },
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "public"
   }
 }
